--- a/style.css
+++ b/style.css
@@ -12,7 +12,28 @@
 }
 .cabecalho-imagem{
     width: 13%;
+   padding-right: 31%;
 }
 .cabecalho-lista-item{display: inline-block;
 margin: 0 16px;
+padding: 31% 0;
+}
+.imagem-marilene{
+    width: 20%;
+    padding-left: 20%;
+}
+.marilene{ 
+background-image: linear-gradient( #D1936D,#dabaa7);
+color: rgb(255, 255, 255);
+display: flex ;
+justify-content: center;
+align-self: center;
+padding: 30px 0;
+}
+
+.marilene-div-conteudo{ 
+    width: 35%;
+}
+.marilene-titulo{
+    padding: 24px 0;
 }
