--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
     margin:0 ;
     padding:0 ;
 }
-
+body{
+    font-family: 'Comfortaa', cursive;
+}
 
 .cabecalho {
     background-color:#D1936D ;
@@ -36,4 +38,8 @@ padding: 30px 0;
 }
 .marilene-titulo{
     padding: 24px 0;
+}
+
+.produto-imagem{
+    width: 120px;
 }
