--- a/style.css
+++ b/style.css
@@ -22,38 +22,28 @@ padding: 31% 0;
 }
 .imagem-marilene{
     width: 20%;
-    padding-left: 20%;
+    padding-left: 15%;
 }
-.marilene{ 
-background-image: linear-gradient( #D1936D,#dabaa7);
-color: rgb(255, 255, 255);
-display: flex ;
-justify-content: center;
-align-self: center;
-padding: 30px 0;
+.marilene{
+    background-image: linear-gradient(#D1936D,#e7b494 );
+    color: beige;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 28px 0;
 }
-
-.marilene-div-conteudo{ 
-    width: 35%;
+.marilene-div-conteudo{
+width: 35%;
 }
 .marilene-titulo{
     padding: 24px 0;
 }
-
-.produto-imagem{
+.imagem-guadalupe{
     width: 120px;
 }
-.imagem-icone{ 
+.icone-sacola{
     width: 24px;
 }
 .produtos-div{
     text-align: center;
-}
-.produtos-titulo{
-    text-align: center;
-    padding: 50px 0;
-}
-.produtos-todos{ 
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
 }
